--- a/src/app/auth/pages/login/login.component.html
+++ b/src/app/auth/pages/login/login.component.html
@@ -32,7 +32,7 @@
             </div>
         </div>
 
-        <button type="submit" class="form__button-confirm" [disabled]="!profileForm.valid || pending">{{pendingButton}}</button>
+        <button type="submit" class="form__button-confirm" [disabled]="!profileForm.valid || pending">{{submitButtonTitle}}</button>
 
         <div *ngIf="hasError()" class="alert">
             {{errorMessage}}
