--- a/src/app/auth/pages/login/login.component.html
+++ b/src/app/auth/pages/login/login.component.html
@@ -10,7 +10,7 @@
     </div>  
     <form class="form" [formGroup]="profileForm" (ngSubmit)="login()">
 
-        <label for="email">Электронная почта</label>
+        <label class="form__label" for="email">Электронная почта</label>
         <input [ngClass]="profileForm.controls.email.valid ? 'form__input form__input--valid' : 'form__input'" type="email" name="email" formControlName="email" />
         <div *ngIf="profileForm.controls.email.invalid && 
             (profileForm.controls.email.dirty || profileForm.controls.email.touched)"
@@ -21,7 +21,7 @@
             </div>
         </div>
 
-        <label for="password">Пароль</label>
+        <label class="form__label" for="password">Пароль</label>
         <input [ngClass]="profileForm.controls.password.valid ? 'form__input form__input--valid' : 'form__input'" type="password" name="password" formControlName="password" />
         <div *ngIf="profileForm.controls.password.invalid && 
             (profileForm.controls.password.dirty || profileForm.controls.password.touched)"
