--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,4 +2,59 @@
 
 body {
     font-family: Arial, Helvetica, sans-serif;
+    margin: 0px;
+}
+
+@mixin node-text {
+    border-style: solid;
+    border-width: 1px;
+    box-sizing: border-box;
+    border-radius: 10px;
+    padding: 5px;
+    font-size: 10pt;
+}
+
+.node {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height:150px;
+    width:100%;
+
+    &__avatar {
+        border-radius: 50%;
+        border: solid;
+        background-color: aliceblue;
+        padding: 5px;
+    }
+}
+
+.linage {
+    fill: none;
+    stroke: #000;
+}
+.marriage {
+    fill: none;
+    stroke: rgb(158, 39, 39);
+}
+.man {
+    background-color: lightblue;
+    @include node-text();
+
+}
+.woman {
+    background-color: pink;
+    @include node-text();
+    
+}
+.emphasis{
+    font-style: italic;
+}
+p {
+    padding:0;
+    margin:0;
+}
+svg {
+    border-style: solid;
+    border-width: 1px;
 }
