--- a/src/app/shared/components/popup-message/popup-message.component.scss
+++ b/src/app/shared/components/popup-message/popup-message.component.scss
@@ -2,6 +2,7 @@
     padding: 10px;
     border-radius: 15px;
     position: fixed;
+    bottom: 2%;
     left: 50%;
     transform: translate(-50%, 150%);
     display: flex;
