--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -15,13 +15,20 @@
     border-radius: 0px 0px 5px 5px;
     z-index: 10;
 
-    &__logo{
+    &__logo {
         grid-area: logo;
         display: flex;
         align-items: center;
     }
 
-    &__create-tree{
+    &__create-tree-wrapper {
+        padding: 0;
+        margin: 0;
+        display: flex;
+        justify-content: center;
+    }
+
+    &__create-tree {
         grid-area: create;
         display: flex;
         width: fit-content;
@@ -47,7 +54,7 @@
     }
 
     &__auth{
-        $background-color: rgb(200, 240, 255);
+        $background-color: #b3d9ff;
 
         display: flex;
         justify-content: end;
