--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,115 @@
-#tree {
-    height: 100vh;
+:root {
+    --main-bg: #f0f0f0;
+    --accent-color: #3498db;
+    --text-color: #333;
+    --highlight-color: #e74c3c;
+  }
+
+  body {
+    font-family: 'Arial', sans-serif;
+    line-height: 1.6;
+    color: var(--text-color);
+    background-color: var(--main-bg);
+    margin: 0;
+    padding: 0;
+  }
+
+  .container {
+    margin: 0 auto;
+    padding: 40px;
+  }
+
+  .hero {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: rgb(11, 11, 11);
+    position: relative;
+    overflow: hidden;
     width: 100%;
-}
+
+    .background-image {
+        height: 100%;
+        width: 100%;
+        padding-top: 50px;
+        background-image: url('./../../public/bez-imeni-1-min.jpg');
+        top: 0px;
+        background-size: cover;
+        background-position: center;
+        height: 75vh;
+        animation: pulse 1s ease-out forwards;
+    }
+  }
+
+  .hero::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(255, 255, 255, 0.2);
+    transform: translateY(100px);
+    transition: transform 1s ease-in-out;
+  }
+
+  .hero h1 {
+    font-size: 48px;
+    margin-bottom: 20px;
+    animation: fadeInUp 1s ease-out forwards;
+  }
+
+  .hero p {
+    font-size: 20px;
+    animation: fadeInUp 1s ease-out forwards;
+  }
+
+  .hero:hover::before {
+    transform: translateY(0);
+  }
+
+  nav a {
+    display: inline-block;
+    margin: 0 10px;
+    padding: 12px 24px;
+    border-radius: 10px;
+    text-decoration: none;
+    color: var(--accent-color);
+    transition: all 0.3s ease;
+    font-weight: bold;
+    overflow: hidden;
+    position: relative;
+  }
+  
+  nav a::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 2px;
+    background-color: var(--accent-color);
+    width: 100%;
+    transform: scaleX(0);
+    transition: transform 0.3s ease;
+  }
+  
+  nav a:hover {
+    background-color: #b3d9ff;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  }
+  
+  nav a:hover::after {
+    transform: scaleX(1);
+  }
+
+  @keyframes fadeInUp {
+    from { opacity: 0; transform: translateY(50px); }
+    to { opacity: 1; transform: translateY(0); }
+  }
+
+  @keyframes pulse {
+    0% { transform: scale(1); }
+    50% { transform: scale(1.05); filter: blur(5px); }
+    100% { transform: scale(1); }
+  }
