--- a/src/app/tree/pages/create-tree/create-tree.component.scss
+++ b/src/app/tree/pages/create-tree/create-tree.component.scss
@@ -15,21 +15,24 @@
         justify-content: center;
         align-items: stretch;
         gap: 10px;
-        width: 270px;
+        width: 300px;
 
         &__input{
             @include forms.text-input;
-            width: 250px;
+            width: 280px;
         }
 
         &__label{
             @include forms.label();
+            margin-bottom: 10px;
+            margin-top: 10px;
+            text-align: center;
         }
 
         &__button-confirm {
             @include button.button-confirmed();
             font-size: 16px;
-            margin: 10px 60px;
+            margin: 10px 75px;
             width: fit-content;
             z-index: 1;
         }
@@ -38,7 +41,7 @@
             background: rgb(249,195,195);
             background: linear-gradient(68deg, rgba(249,195,195,1) 0%, rgba(254,217,217,1) 50%, rgba(252,69,69,1) 100%);
             border-color: darkgrey;
-            border-radius: 6px;
+            border-radius: 10px;
             padding: 6px;
             transform: translateX(0%);
             transition: transform ease-out 1s;
