--- a/src/app/shared/styles/_avatar.scss
+++ b/src/app/shared/styles/_avatar.scss
@@ -1,7 +1,7 @@
 @mixin avatar{
     border-radius: 50%;
     border-style: solid;
-    border-width: 2px;
-    border-color: rgba(252,69,69,1);
+    border-width: 3px;
+    border-color: #feb7b7;
     object-fit: cover;
 }
