--- a/src/app/tree/pages/tree/tree.component.scss
+++ b/src/app/tree/pages/tree/tree.component.scss
@@ -1,5 +1,10 @@
 @use './../../../shared/styles/button';
 
+#tree {
+    height: 100vh;
+    width: 100%;
+}
+
 .first-node {
     width: 100%;
     height: 100vh;
