--- a/src/app/tree/pages/create-tree/create-tree.component.html
+++ b/src/app/tree/pages/create-tree/create-tree.component.html
@@ -1,7 +1,7 @@
 <div class="form-wrapper">
     <img src="tree-of-hand-draw-foliage-circles-svgrepo-com.svg" alt="tree" width="300px">
     <form class="form" [formGroup]="createTreeForm" (ngSubmit)="submitCreateTreeForm()">
-        <label class="form__label" for="email">Введите&nbsp;название&nbsp;нового семейного древа</label>
+        <h2 class="form__label">Введите&nbsp;название&nbsp;нового семейного древа</h2>
         <input class="form__input" type="text" name="name" formControlName="name" />
         @if (errorMessage !== '') {
             <div class="alert" >
